# Pokemon-Game

./: README.md  coding preferences.txt  constants.py  fetchApi.py  game.py  gameDatabase.db  mainPage.css  mainPage.html  pokemon.py  pokemonDatabase.py  pokemonTypes.py  pyproject.toml  web.py
Templates/: Pokedex.html  card.html  cardGame.html  cardGameDisplay.html  cardsLeft.html  damageRelation.html  gameOptions.html  gamePage.html  layout.html  mainPage.html  selectMove.html
static/: index.js
styling/: index.js  style.css
tests/: test_unitTests.py  unitTests.py
