[tool.poetry]
name = "pokemon-game"
version = "0.1.0"
description = ""
authors = ["Louise de Mattos <72737315+Emily774@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
Flask = "^2.0.1"
pytest = "^6.2.5"
pytest-runner = "^5.3.1"
pygame = "^2.0.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
